--- a/src/app/components/stores/store-basic-info/store-basic-info.component.html
+++ b/src/app/components/stores/store-basic-info/store-basic-info.component.html
@@ -201,7 +201,7 @@
       type="button"
       (click)="saveChanges()"
       [disabled]="storeForm.invalid || isLoading"
-      [label]="storeData ? 'Guardar cambios' : 'Siguiente paso'"
+      [label]="storeData ? 'Actualizar datos' : 'Siguiente paso'"
       severity="success"
       [rounded]="true"
       size="small"
