--- a/src/app/shared/components/stepper/stepper.component.html
+++ b/src/app/shared/components/stepper/stepper.component.html
@@ -1,6 +1,14 @@
 <div class="flex flex-col min-h-[100dvh] bg-neutral-50">
+
+    <!-- 🔹 Encabezado -->
+  <app-page-header
+    title="Mis tienda"
+    subtitle="Espacio exlusivo para la gestion de tu tienda "
+    icon="pi pi-shop"
+  ></app-page-header>
+
   <main class="flex-1 relative w-full">
-    <div class="max-w-5xl mx-auto p-4 sm:p-6 lg:p-8 transition-all duration-300">
+    <div class="mx-auto p-4 sm:p-6 lg:p-8 transition-all duration-300">
       <!-- 💻 Tabs horizontales (desktop) -->
       <p-tabView
         [(activeIndex)]="activeStepIndex"
